css/style.css
/*------------------------------------------------------------------
Project:    Haswell
Version:    2.5
Last change:    07.11.2020
Author: Abcgomel
Site: https://themeforest.net/user/abcgomel/portfolio
-------------------------------------------------------------------*/

/*    GLOBAL STYLES
===================================================================*/
/*=== CONTENT OF CSS FILE =========================================

	#PRELOADER
	#CSS RESET
  #SEARCH
  #REVO #SLIDER custom
	#IMAGES
	#HEADER
  #FEATURES 1
  #FEATURES 2-3
  #FEATURES 4
  #FEATURES 5
  #FEATURES 6
  #FEATURES 7
  #FEATURES 8
  #FEATURES 9
  #FEATURES 10
  #SHOP
  #SHOP #DEPARTMENT
  #SHOP #ITEMS
  #SHOP #INFO
  #PORTFOLIO 1 GRID
  #PORTFOLIO 1
  #PORTFOLIO SINGLE
  #CLIENTS 1
  #TESTIMONIALS 1
  #TESTIMONIALS 2
  #WORK PROCESS 1
  #ABOUT US 1
  #ABOUT US 2
  #COUNTERS 1
  #ADS 1 & 2
  #VIDEO ADS 1
  #BLOG SECTION 1
  #BLOG SECTION 2
  #BLOG #WIDGETS
  #CONTACT INFO SECTION 1
  #GMAPS 1
  #STATICK MEDIA
  #PAGE TITLE
  #CONTACT MENU
  #CONTACT FORM
  #FOOTER 1
  #FOOTER 2
  #FOOTER 2 BLACK
  #MENU	
		#MAIN-MENU MENU
		#INDENT MAIN CONTAINER	( responsive in "media query" section)
		#STICKY ICON BUTTON ANIMATION
		#ANIMATION FOR SUB MENU
	#MEGAMENU
	#PRIMARY MENU
  #HEADER FIX
  #LOGO
  #BREADCRUMB 
  #CAROUSEL
  #NEWSLETTER
  #OUR CLIENTS
  #TABS
  #BLOCKQUOTES
  #TESTIMONIALS
  #PAGE TITLE
  #404
  #COMING SOON
  #ALERT BOXES
  #SHORTCODES #DEMO
  #BLOG
  #COMMENTS 
  #WORK NAV
  #RELATED POSTS
  #PROGRESS BAR
  #MAINTENANCE
  #PORTFOLIO
  #ELEMENTS
  #FOOTER
  #TYPOGRAPHY
  #BUTTONS
  #MARGINS #PADDINGS
  #BACK TO TOP BUTTON
  #FAQ
  #COUNTER
  #ACCORDION-CUSTOM
  #ACCORDION 3
  #ACCORDION
  #TOGGLE
  #PRICING TABLE
  #TIMELINE
  #CLEARFIX
   
  === #RESPONSIVE STYLES =======================================
  
	#PORTFOLIO FILTER
	
	Max Width "600px"
		#TESTIMONIALS
		
	Max Width "640px"

	Max Width "767px"

	Max Width "875px"

	Max Width "991px" - Min Width "768px"
		#SERVICES
		
	Max Width "991px"  PHONE
		#MARGINS MOBILE
		#PAGE TITLE
		#GOOGLE MAP
		#NEWSLETTER
		#HEADER
		#SLIDER 1
		#TWITTER
		#TESTIMONIALS
		#SERVICES
		#TIMELINE 
		#MAINTENANCE
		#HEADER MENU
		#INDENT MAIN CONTAINER
		#FOOTER
		#FOOTER 2
		#PRICING TABLE
	
	Min Width "992px" DESKTOP
		
	Max Width "1199px" - Min Width "992px"

	Max Width "1024px" TABLET
		#BOXES 2 
		#FOOTER
		#FOOTER 2
		#TWITTER
		#FOOTER CONTACT INFO
		
	Max Width "1200px"	
	
	Max Width "479px"
	
===	#Core Owl Carousel CSS File 
===	#Owl Carousel Owl Demo THEME CSS File 
===	#Magnific Popup CSS File

  #INDEX-PORTFOLOLIO 2 NEW
  #TRAVEL NEW
  #SIDE MENU NEW 
  #FULL SCREEN MENU NEW
  #TWITTER FEEDS NEW
  #FLICKR FEEDS NEW
  #TOP BAR NEW
  #CONSTRUCTION 2 NEW
  #CAFE NEW

*/

/* #PRELOADER  ============================================== */
/* This only works with JavaScript, 
if it's not present, don't show loader */

#loader-overflow{
  display:block;
  width: 100%;
  height: 100%;
  position: fixed;
  top: 0;
  left: 0;
  background: #fefefe;
  z-index: 99999;	
}
#loader3 {
  will-change: transform;
  width: 40px;
  height: 40px;
  position: absolute;
  top: 50%;
  left: 50%;
  margin: -20px 0 0 -20px;
  background-color: #b6b6b7;
  border-radius: 50%;  
  -webkit-animation: scaleout 1.1s infinite ease-in-out;
  animation: scaleout 1.1s infinite ease-in-out;
  
  text-indent: -99999px;
  z-index: 999991;
}
@-webkit-keyframes scaleout {
  0% { 
    transform: scale(0);
    -webkit-transform: scale(0);
  }
  100% {
    transform: scale(1.0);
    -webkit-transform: scale(1.0);
    opacity: 0;
  }
}
@keyframes scaleout {
  0% { 
    -webkit-transform: scale(0);
    -ms-transform: scale(0);
    transform: scale(0);
    opacity: 0;
  }
  40% {
    opacity: 1;
  }
  100% {
    -webkit-transform: scale(1.0);
    -ms-transform: scale(1.0);
    transform: scale(1.0);
    opacity: 0;
  }
}

/* #CSS RESET
 ===================================================================*/
html, body, div, span, applet, object, iframe, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, fieldset, form, label, legend, caption, tbody, tfoot, thead, tr, th, td {
margin: 0;
padding: 0;
border: 0;
outline: 0;
}
:focus {
outline: 0;
}

/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
html,body{
	margin:0;
	padding:0;
}
table {
	border-collapse:collapse;
	border-spacing:0;
}
fieldset,img { 
	border:0;
}
input{
	border:1px solid #b0b0b0;
	padding:3px 5px 4px;
	color:#979797;
}
address,caption,cite,code,dfn,th,var {
	font-style:normal;
	font-weight:normal;
}
caption,th {
	text-align:left;
}
q:before,q:after {
	content:'';
}
abbr,acronym { border:0;
} 
body {
  border: 0 none;
  font-size: 100%;
  margin: 0;
  outline: 0 none;
  padding: 0;
  vertical-align: baseline;
	font-size: 14px;
	line-height: 25px;
	font-family: 'Open Sans', Arial, Helvetica, sans-serif; 
	font-weight: normal;
	color: #7e8082;
	background-color: #fff;
	-webkit-font-smoothing: antialiased !important;
	-webkit-text-size-adjust: 100% !important;
}
.bold {
	font-weight:bold !important;
}
.font-light {
	font-weight:100 !important;
}
.font-norm {
	font-weight:normal !important;
}
::-moz-selection
{
	background-color: #ffea00;
  color:#4b4e53;
}
::selection
{
	background-color: #ffea00;
  color:#4b4e53;
}
::-moz-selection  
{
	background-color: #ffea00;
  color:#4b4e53;
}
.relative {
  position: relative;
}

/* #SEARCH NEW
================================================== */
.gsc-selected-option-container.gsc-inline-block {
  width: auto !important;
}
/* ... */

